# tracker

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_api_keys.py  006_project_metric_snapshots.py  008_general_startup_fields.py  009_investor_intelligence.py  010_data_model_phase1.py  011_search_and_indexes.py  012_graph_indexes.py  013_api_key_expiry.py  014_webhooks.py  015_brain_tables.py  016_api_key_email.py  017_founder_enrichment.py  018_investor_intel.py  019_api_key_role.py  020_investor_focus.py
scripts/: MONITORING.md  backfill_edgar.py  backup_db.sh  cleanup_investors.py  manage_contributors.py  manage_keys.py  mcp_server.py  restore_db.sh  run_collectors.py  run_enrichers.py  run_scheduler.py  start.sh
src/: config.py  scheduler.py
src/api/: app.py  auth.py  schemas.py
src/collectors/: accelerator_500.py  accelerator_directory.py  angel_group_scraper.py  angel_investor_directory.py  angellist_enricher.py  base.py  coingecko_community_enricher.py  coingecko_enricher.py  coingecko_linker.py  crunchbase_angel_discovery.py  crunchbase_enricher.py  (+40 more)
tests/: test_collector_defillama.py  test_entity_resolver.py  test_hackernews_enricher.py  test_ingest.py  test_mcp.py  test_models_phase1.py  test_normalizer.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_reddit_enricher.py  test_security.py  test_snapshot_enricher.py  test_webhooks.py
tracker/: README.md  docker-compose.yml  pyproject.toml
(+81 files in other folders)
