[project]
name = "raisefn-tracker"
version = "0.1.0"
description = "Open source crypto fundraising tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "sqlalchemy[asyncio]==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "python-slugify==8.0.4",
    "redis[hiredis]==7.3.0",
    "beautifulsoup4==4.14.3",
    "mcp==1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "fakeredis>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/models/*.py" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
